--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,4 +14,15 @@
     height: 60px;
     border: 2px solid black;
     background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card>span{
+    font-weight: bolder;
+    font-size: 1.5rem;
+}
+.display_none{
+    visibility:hidden;
+   
 }
